--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <!--  <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
+        <script src="http://192.168.1.133:8081/target/target-script-min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.3.min.css" />
         <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css"> -->
       	<script type="text/javascript" src="js/jquery.js"></script> 
