--- a/index.html
+++ b/index.html
@@ -1847,13 +1847,13 @@ navigator.device.exitApp();
 </div>
 </div>
 <div data-role="footer" data-position="fixed" data-theme="b"> <!-- data-position="fixed" is add so that the panel can be scroll -->
-<div data-role="navbar" data-grid="c">
+<div data-role="navbar" data-grid="b">
 <ul>
 <!-- <li><a href="#pageDirectCall" data-icon="grid">Dial</a></li> -->
 <li><a href="#pageDialPad" data-icon="grid">Dial</a></li>
 <li><a href="#pageContactList" data-icon="user">Contacts</a></li>
 <li><a href="#pageRecentlyDialed" data-icon="phone" >Recent</a></li>
-<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
+<!--<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>-->
 </ul>
 </div><!-- /navbar -->
 </div>
@@ -1944,13 +1944,13 @@ navigator.device.exitApp();
 </div>
 </div>
 <div data-role="footer" data-position="fixed" data-theme="b" > <!-- data-position="fixed" is add so that the panel can be scroll -->
-<div data-role="navbar" data-grid="c">
+<div data-role="navbar" data-grid="b">
 <ul>
 <!-- <li><a href="#pageDirectCall" data-icon="grid">Dial</a></li> -->
 <li><a href="#pageDialPad" data-icon="grid">Dial</a></li>
 <li><a href="#pageContactList" data-icon="user">Contacts</a></li>
 <li><a href="#pageRecentlyDialed" data-icon="phone">Recent</a></li>
-<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
+<!--<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
 <!-- <li><a href="#pageSettings" data-icon="gear">Account Details</a></li>
 <li><a id="logout" data-icon="power" data-icon="href="#" >Logout</a></li> -->
 </ul>
@@ -1979,13 +1979,13 @@ navigator.device.exitApp();
 </div>
 </div>
 <div data-role="footer" data-position="fixed" data-theme="b"> <!-- data-position="fixed" is add so that the panel can be scroll -->
-<div data-role="navbar" data-grid="c">
+<div data-role="navbar" data-grid="b">
 <ul>
 <!-- <li><a href="#pageDirectCall" data-icon="grid">Dial</a></li> -->
 <li><a href="#pageDialPad" data-icon="grid">Dial</a></li>
 <li><a href="#pageContactList" data-icon="user">Contacts</a></li>
 <li><a href="#pageRecentlyDialed" data-icon="phone">Recent</a></li>
-<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
+<!--<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
 <!-- <li><a href="#pageSettings" data-icon="gear">Account Details</a></li>
 <li><a id="logout" data-icon="power" data-icon="href="#" >Logout</a></li> -->
 </ul>
@@ -2131,14 +2131,14 @@ navigator.device.exitApp();
 <li ><a href="call" data-role="tab" class="ui-btn" style="line-height: 40px; font-size: large; background-color: green; margin: 1px;">Call</a></li>
 </ul>
 </div>
-<div data-role="navbar" data-grid="c">
+<div data-role="navbar" data-grid="b">
 <ul>
 <!-- <li><a href="#pageDirectCall" data-icon="grid">Dial</a></li> -->
 <li><a href="#" data-icon="grid">Dial</a></li>
 <li><a href="#pageContactList" data-icon="user">Contacts</a></li>
 <li><a href="#pageRecentlyDialed" data-icon="phone">Recent</a></li>
-<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
-<!-- <li><a href="#pageSettings" data-icon="gear">Account Details</a></li>
+<!--<li><a href="#pageCallLogs" data-icon="clock">Call Logs</a></li>
+ <li><a href="#pageSettings" data-icon="gear">Account Details</a></li>
 <li><a id="logout" data-icon="power" data-icon="href="#" >Logout</a></li> -->
 </ul>
 </div>
