--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ type: "GET",
 url: "http://mail.tsim.in/webcalltest.php",
 //data: {action: 'login',domains: 'tsim.in',web_storage: 'No',user_id: userid,passwd: password},
 data: {action: 'login',web_storage: 'No',user_id: userid,passwd: password},
-cache: false,
+cache: true,
 dataType: 'json',
 success: onSuccess,
 error: onError
