--- a/index.html
+++ b/index.html
@@ -1872,6 +1872,9 @@ navigator.device.exitApp();
 <!-- Page Five i.e Setting Page-->
 <div data-role="page" id="pageSettings" data-title="Settings" >
 <div data-role="header" data-position="fixed" class="ui-alt-icon">
+<h6>........</h6>
+</div>
+<div data-role="header" data-position="fixed" class="ui-alt-icon">
 <a id="a_back" href="#" data-rel="back" class="ui-btn ui-shadow ui-btn-left ui-corner-all ui-btn-icon-notext ui-icon-carat-l">Back</a>
 <h1>Settings</h1>
 <a id="a_refresh" href="#" class="ui-btn ui-shadow ui-corner-all ui-btn-right ui-icon-refresh ui-btn-icon-notext" data-role="button" title="Menu">Refresh</a>
@@ -1933,6 +1936,8 @@ navigator.device.exitApp();
 </div>
 </div>
 <div data-role="page" id="pageRecentlyDialed" data-title="Recent" >
+<div data-role="header" data-position="fixed" class="ui-alt-icon">
+</div>
 <div data-role="header" data-position="fixed" class="ui-alt-icon">
 <h2>Recent</h2>
 <a id="a_recentlydialed_menu" href="#recentlydialed-right-setting-popup" data-rel="popup" data-transition="slidedown" class="ui-btn ui-btn-right ui-shadow ui-corner-all ui-icon-gear ui-btn-icon-notext" data-role="button" title="Menu">Menu</a>
