--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ alert("Cannot Make Call Insufficient parameters");
 });
 /******** BELOW CODE IS CALL FOR MANUAL RETRIVAL OF CONTACT *****/
 $(document).on('click', '#a_contact_retrive', function(){
-console.log("Retive button is clicked");
+console.log("Retrive button is clicked");
 var options = new ContactFindOptions();
 options.filter=""; // empty search string returns all contacts
 options.multiple=true; // return multiple results
