update with box call feature

--- a/index.html
+++ b/index.html
@@ -1962,7 +1962,7 @@ navigator.device.exitApp();
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
 <label for="Call From Box" style="display: block; float:left; text-align:left;" >Call From Box:</label>
-<input name="boxcall" id="boxcall" value="boxcall" style="display: block; float:right;">
+<input type="checkbox" name="boxcall" id="boxcall" value="boxcall" style="display: block; float:right;">
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
 <h2>Settings</h2>
