--- a/index.html
+++ b/index.html
@@ -1961,8 +1961,8 @@ navigator.device.exitApp();
 <label id="creditdetails" style="display: block; float:right; ">0.00</label>
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
-<label for="Call From Box" style="display: block; float:left; text-align:left;" >Call From Box:</label>
-<input type="checkbox" name="boxcall" id="boxcall" value="boxcall" style="display: block; float:right;">
+<label for="boxcall" >Call From Box:</label>
+<input type="checkbox" name="boxcall" id="boxcall" value="boxcall" >
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
 <h2>Settings</h2>
