with box call feature 1.8 ip and  webcalltest.php

--- a/index.html
+++ b/index.html
@@ -1962,7 +1962,7 @@ navigator.device.exitApp();
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
 <label for="boxcall" >Call From Box:</label>
-<input type="checkbox" name="boxcall" id="boxcall" value="boxcall" >
+<input type="checkbox" name="boxcall" id="boxcall">
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
 <h2>Settings</h2>
