--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ $.mobile.changePage("#pageLogin");
 }
 });
 
- $("#boxcall").click(function () {
+ /**$("#boxcall").click(function () {
           //$('').attr('checked', this.checked);
           alert("Box call clicked");
           console.log("Box call clicked");
@@ -679,7 +679,7 @@ $.mobile.changePage("#pageLogin");
           	console.log("Box call value set to 0");
           }
     });
-
+**/
 }); // ondocument ready close
 /*** ***************************************************
 **
