--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@ $.mobile.changePage($("#pageDialPad"), { transition : "slide"});
 });
 /********************************************** DOMAIN DIALOG PAGE CLOSE **************/
 
-$(document).on('pagecreate', '#pageSettings',function(){
+/**$(document).on('pagecreate', '#pageSettings',function(){
 
 alert("Page settings created");
 $("#boxcall").click(function () {
@@ -887,7 +887,7 @@ console.log("Box call value set to 0");
 }
 });
 
-)};
+)};**/
 
 /***************** PAGEDIRECTCALL LOAD STARTS HERE *******************/
 $(document).on('pagecreate', '#pageDirectCall', function(){
