--- a/index.html
+++ b/index.html
@@ -1969,7 +1969,7 @@ navigator.device.exitApp();
 </select> -->
 <div data-role="fieldcontain" >
 <div style="display: inline;">
-<label for="internetswitch" style="float:left; text-align:left;">Internet Status:</label>
+<label for="internetswitch" style="float:left; text-align:left;">Internet Status</label>
 <select name="internetstatus" id="internetstatus" data-role="slider" style="float:right;">
 <option style="font-size: 14px" value="off">Off</option>
 <option style="font-size: 14px" value="on">Active</option>
@@ -1977,11 +1977,11 @@ navigator.device.exitApp();
 </div>
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
-<label for="Balance Details:" style="display: block; float:left; text-align:left;" >Balance Details:</label>
+<label for="Balance Details:" style="display: block; float:left; text-align:left;" >Balance Details</label>
 <label id="creditdetails" style="display: block; float:right; ">0.00</label>
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
-<label for="boxcall" >Call From Box:</label>
+<label for="boxcall">Call From Box</label>
 <input type="checkbox" name="boxcall" id="boxcall">
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
