--- a/index.html
+++ b/index.html
@@ -1700,12 +1700,12 @@ $("#creditdetails").text(creditdetails);
 var boxcall = localStorage.getItem("boxcall");
 
 if(boxcall === null || boxcall == "1"){
-	console.log("box call checked");
+	console.log("box  setting show call checked");
 	$("#boxcall").attr("checked","checked");
 }
 else{
 	$("#boxcall").removeAttr("checked");
-	console.log("box call unchecked");
+	console.log("box setting show call unchecked");
 }
 
 
@@ -1714,18 +1714,26 @@ else{
 }// function PageReady close
 
 $(document).on("click", "#boxcall", function () {
+	document.addEventListener("deviceready", onBoxClick, false);	
 //$('').attr('checked', this.checked);
 alert("Box call clicked");
-console.log("Box call clicked");
+console.log("Box call clicked event");
+)};
+
+function onBoxClick() {
+	console.log("inside one clicked");
+	alert("box clicked");
 if(this.attr('checked')){
 localStorage.setItem("boxcall", "1");
-console.log("Box call value set to 1");
+console.log("Box call value set to in onBoxClick 1");
+alert("Box call value set to in onBoxClick 1");
 }
 else{
 localStorage.setItem("boxcall", "0");
-console.log("Box call value set to 0");
+console.log("Box call value set to in onBoxClick 0");
+alert("Box call value set to in onBoxClick 0");
 }
-});
+}
 
 function checkConnection() {
   var networkState = null; 
