--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <!-- <meta charset="utf-8" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
-<script src="http://192.168.1.8:8081/target/target-script-min.js"></script>
+<!--<script src="http://192.168.1.8:8081/target/target-script-min.js"></script>-->
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.3.min.css" />
 <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css"> -->
 <script type="text/javascript" src="js/jquery.js"></script>
-<script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+<!--<script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script> -->
+
 <script type="text/javascript" src="js/jquery.mobile-1.4.3.js"></script>
 <!-- <script type="text/javascript" src="js/jquery-ui.js"></script> -->
 <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">-->
@@ -666,7 +667,7 @@ $.mobile.changePage("#pageLogin");
 }
 });
 
- $(document).on("click", "#boxcall", function () {
+/** $(document).on("click", "#boxcall", function () {
           //$('').attr('checked', this.checked);
           alert("Box call clicked");
           console.log("Box call clicked");
@@ -678,7 +679,7 @@ $.mobile.changePage("#pageLogin");
           	localStorage.setItem("boxcall", "0");
           	console.log("Box call value set to 0");
           }
-    });
+    });**/
 
 }); // ondocument ready close
 /*** ***************************************************
@@ -1179,7 +1180,7 @@ $(document).on("click", "#boxcall", function () {
 //$('').attr('checked', this.checked);
 alert("Box call clicked");
 console.log("Box call clicked event");
-)};
+});
 
 function onBoxClick() {
 	console.log("inside one clicked");
