--- a/index.html
+++ b/index.html
@@ -2014,8 +2014,8 @@ navigator.device.exitApp();
 <label id="creditdetails" style="display: block; float:right; ">0.00</label>
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
-<label for="boxcall">Call From Box</label>
-<input type="checkbox" name="boxcall" id="boxcall">
+<label for="box_call">Call From Box</label>
+<input type="checkbox" name="box_call" id="boxcall">
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
 <h2>Settings</h2>
