--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ $(document).on("click", "#boxcall", function () {
           //$('').attr('checked', this.checked);
           alert("Box call clicked");
           console.log("Box call clicked");
-          if(this.attr('checked')){
+          if($this.is(':checked')){
           	localStorage.setItem("boxcall", "1");
           	console.log("Box call value set to 1");
           	alert("Box call value set to 1");
