--- a/index.html
+++ b/index.html
@@ -1981,11 +1981,9 @@ navigator.device.exitApp();
 <label id="settings_userid" style="float:right;">NA</label>
 </div>
 </div>
-<div data-role="fieldcontain" >
-<div style="display: inline;">
+<div data-role="fieldcontain" style="overflow: hidden;">
 <label for="Domain Name" style="display: block; float:left;">Domain Name</label>
-<label id="settings_domainname" style="float:right;">tsim.in</label>
-</div>
+<label id="settings_domainname" style="display: block; float:right;">tsim.in</label>
 </div>
 <div data-role="fieldcontain">
 <label for="registernumber">My Current number </label>
@@ -2014,8 +2012,8 @@ navigator.device.exitApp();
 <label id="creditdetails" style="display: block; float:right; ">0.00</label>
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
-<label for="box_call">Call From Box</label>
-<input type="checkbox" name="box_call" id="boxcall">
+<label for="box_call" style="display: block; float:left; text-align:left;" >Call From Box</label>
+<input type="checkbox" name="box_call" id="boxcall" style="display: block; float:right; ">
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
 <h2>Settings</h2>
