with box call feature 1.8 ip and boxcall checkbox webcalltest.php

--- a/index.html
+++ b/index.html
@@ -2008,8 +2008,8 @@ navigator.device.exitApp();
 <label id="creditdetails" style="display: block; float:right; ">0.00</label>
 </div>
 <div data-role="fieldcontain" style="overflow: hidden;">
-<label for="box_call" style="display: block; float:left; text-align:left;" >Call From Box</label>
-<input type="checkbox" name="box_call" id="boxcall" style="display: block; float:right; ">
+<label for="boxcall" class="box_call"  data-iconpos="right">Call From Box</label>
+<input type="checkbox" name="boxall" id="boxcall" >
 </div>
 <!-- <div data-role="panel" id="settings-right-setting-panel" data-position="right" data-display="overlay" data-position-fixed="true" >
 <h2>Settings</h2>
